<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/factTypeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Тип факта"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/colorSecondaryText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decreaseBtn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryLight"
                android:onClick="decreaseBtnClick"
                android:text="-"/>

            <EditText
                android:id="@+id/valueEt"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="1"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large"/>

            <Button
                android:id="@+id/increaseBtn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryLight"
                android:onClick="increaseBtnClick"
                android:text="+"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dec1hBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryLight"
                android:onClick="dec1hBtnClick"
                android:text="-1ч"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/colorSecondaryText"/>

            <Button
                android:id="@+id/dec30mBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryLight"
                android:onClick="dec30mBtnClick"
                android:text="-30м"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/colorSecondaryText"/>

            <Button
                android:id="@+id/dec15mBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryLight"
                android:onClick="dec15mBtnClick"
                android:text="-15м"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/colorSecondaryText"/>

            <Button
                android:id="@+id/timeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryLight"
                android:onClick="timeBtnOnClick"
                android:text="13:25"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/colorPrimaryText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dec1dBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryLight"
                android:onClick="dec1dBtnClick"
                android:text="ВЧЕРА"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@color/colorSecondaryText"/>

            <Button
                android:id="@+id/dateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryLight"
                android:onClick="dateBtnOnClick"
                android:text="24.01.2017"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large"/>
        </LinearLayout>

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:onClick="updateBtnOnClick"
            android:text="Сохранить"/>

        <EditText
            android:id="@+id/descrEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="описание"
            android:inputType="textMultiLine"/>
    </LinearLayout>
</layout>