<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/timeTv"
        android:layout_column="0"
        android:layout_marginRight="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="13:45"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorSecondaryText"/>

    <TextView
        android:id="@+id/headerTv"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="Header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/valueTv"
        android:layout_marginTop="4dp"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

</GridLayout>

